--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
 <div class="container-fluid">
     <div class="row mt-3">
         <div class="col-12 col-md-5 col-lg-4 col-xl-3">
-            <h4 class="mb-3 text-danger">PixiJS Bitmap Font from</h4>
+            <h4 class="mb-3 text-danger text-nowrap">PixiJS Bitmap Font from
+                <span id="app-version" class="badge bg-dark fs-7"></span></h4>
 
             <div id="options-acc" class="accordion accordion-flush">
                 <%= require('html-loader!./partials/fonts.html').default %>
